[package]
name = "vyg-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for the Varyag network utility, handling HTTP, TCP, and WebSocket operations."
license = "MIT"
repository = "https://github.com/user/varyag" # Placeholder
keywords = ["network", "cli", "http", "tcp", "tunnel"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
vyg-display = { path = "../vyg-display" }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
anyhow = "1.0.86"
serde_json = "1.0.117"
hyper = "1.2.0"
http-body-util = "0.1.1"
futures-util = "0.3.30"
url = "2.5.0"
tower-http = { version = "0.5.2", features = ["fs"] }
bore-cli = "0.5.1"
