[package]
name = "vyg-display"
version = "0.1.0"
edition = "2021"
description = "A crate for beautiful terminal output, including syntax highlighting for JSON."
license = "MIT"
repository = "https://github.com/user/varyag" # Placeholder
keywords = ["cli", "terminal", "tui", "pretty-print"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
syntect = "5.2.0"
colored = "2.1.0"
serde_json = "1.0.117"
cli-table = "0.4.7"
anyhow = "1.0.86"
